# BoubaOS

./: .gitignore  CMakeLists.txt  Makefile  README.md  interpreter.c  run_tests.sh  shell.c  shell.h  shellmemory.c
include/commands/: echo.h  exec.h  my_cd.h  my_fork.h  my_ls.h  my_mkdir.h  my_touch.h  print.h  quit.h  run.h  set.h
include/core/: interpreter.h  shell.h
include/error/: badcommand.h
include/memory/: backing_store.h  shellmemory.h
include/scheduling/: pcb.h  ready_queue.h  scheduler.h
include/utils/: badcommand.h  utils.h
src/: Makefile  interpreter.c  interpreter.h  pcb.c  pcb.h  process_table.c  process_table.h  ready_queue.c  ready_queue.h  scheduler.c  scheduler.h  shell.c  shellmemory.c  shellmemory.h
src/commands/: echo.c  exec.c  help.c  my_cd.c  my_fork.c  my_ls.c  my_mkdir.c  my_touch.c  print.c  quit.c  run.c  set.c
src/core/: interpreter.c  shell.c
src/error/: badcommand.c
src/memory/: backing_store.c  shellmemory.c
src/scheduling/: pcb.c  ready_queue.c  scheduler.c
src/utils/: badcommand.c  utils.c
tests/: run_tests.sh
tests/interpreter-cmd-tests/: badcommand_result.txt  blankline_result.txt  echo_result.txt  fork1.txt  fork1_result.txt  ls.txt  ls_result.txt  mkdir.txt  mkdir_result.txt  oneline2_result.txt  oneline_result.txt  prompt_result.txt  run_result.txt  set_result.txt
tests/scheduler-tests/: T_AGING2_result.txt  T_AGING3_result.txt  T_AGING4_result.txt  T_AGING_result.txt  T_FCFS2_result.txt  T_FCFS3_result.txt  T_FCFS4_result.txt  T_FCFS_result.txt  T_RR2_result.txt  T_RR30.txt  T_RR30_result.txt  T_RR3_result.txt  T_RR4_result.txt  T_RR_result.txt  T_SJF2_result.txt  T_SJF3_result.txt  T_SJF_result.txt
